# tiny_projects

./: .gitignore  README.md
20231107-map_guessing/: .gitignore  README.md  index.html
20231111-reader_mode/: README.md  app.py  index.html
20240304-search-llm/: .gitignore  README.md  prompt2json.py  sample_post.sh
20240304-search-llm/prompts/: chatml.txt  gemma.txt  gemma_v0.txt  phi2.txt  prompt_tinyllama.txt
20240328-fastapi-celery-progress-queue/: .gitignore  README.md  index.html  main.py  serve_frontend.py  worker.py
20240411-fastapi-celery-redis-sql/: .gitignore  .pre-commit-config.yaml  README.md  backend.py  pyproject.toml  worker.py
20240411-fastapi-celery-redis-sql/frontend/: index.html  serve_frontend.py
20240411-fastapi-celery-redis-sql/src/: tasks.py  utils.py
20240416-k8s-pytorch-training/: Dockerfile  Makefile  job-def.yaml  payload.py  payload_lightning.py  requirements.txt
20240416-k8s-pytorch-training/lib/: learner.py  utils.py  validated_config.py
20240423-solidity-nonsense-check/: .gitignore  README.md  check_socials.py  check_stdin.py  ng.py  nonsense_scoring.py  pyproject.toml  score_lines.sh  tspy.py
20240510-django-ninja-db-process/: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
20240510-django-ninja-db-process/benchmark/: README.md  empty_add_task.lua
20240510-django-ninja-db-process/chousaheidan/: manage.py  reset_db_and_sqlite_setup.sh
20240510-django-ninja-db-process/chousaheidan/chousaheidan/: api.py  asgi.py  settings.py  urls.py  wsgi.py
20240510-django-ninja-db-process/chousaheidan/tasks/: models.py
20240530-thread-signal-handling/: .pre-commit-config.yaml  README.md  example_signal_handle.py  pyproject.toml
20240530-thread-signal-handling/phoenix/: manage.py  migrate_and_sqlite_setup.sh
20240530-thread-signal-handling/phoenix/phoenix/: api.py  asgi.py  settings.py  urls.py
20240530-thread-signal-handling/phoenix/phoenix/api_specs/: schemas.py
20240530-thread-signal-handling/phoenix/tasks/: celery_instance.py  celery_tasks.py  models.py
20240530-thread-signal-handling/phoenix/tasks/management/commands/: runrespawn.py
20240530-thread-signal-handling/phoenix/tasks/migrations/: 0001_initial.py
20240602-tour-recommendation/: .gitignore  .pre-commit-config.yaml  README.md  backend.py  generate_dataset.py  generate_embeddings.py  make_images.py  pyproject.toml  query_demo_tui.py  sd_mps.ipynb
20240602-tour-recommendation/frontend/: .gitignore  package.json
20240602-tour-recommendation/frontend/src/: app.html
20240602-tour-recommendation/frontend/src/routes/: +page.svelte  Item.svelte  Loading.svelte
20240602-tour-recommendation/lib/: common.py  static.py
20240606-thread-signal-handling/: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
20240606-thread-signal-handling/phoenix/: migrate_and_sqlite_setup.sh
20240606-thread-signal-handling/phoenix/phoenix/: api.py  settings.py  wsgi.py
20240606-thread-signal-handling/phoenix/tasks/: celery_instance.py  celery_tasks.py  models.py
20240606-thread-signal-handling/phoenix/tasks/management/commands/: runrespawn.py
20240628-django-prometheus/: .gitignore  .pre-commit-config.yaml  README.md  prometheus.yml  pyproject.toml
20240628-django-prometheus/phoenix/phoenix/: api.py  asgi.py  settings.py  urls.py
20240628-django-prometheus/phoenix/tasks/: celery_instance.py  celery_tasks.py  models.py
20240628-django-prometheus/phoenix/tasks/management/commands/: runrespawn.py
20240702-llm-serve-grammar/: README.md  post.sh  sample_request_grammar.json
20240827-text-suggest-ui/: index.html  pyproject.toml  serve.py
20240827-text-suggest-ui/static/: diff.js
20240914-single-page-compare-rv-rental/: README.md  index.html  index_minified.html
20240917-search-demo-jobs-hn/: .gitignore  Makefile  generate_embeddings.py  pyproject.toml  query_demo_tui.py
20240917-search-demo-jobs-hn/autocomplete/: generate_few_shots_prompt.py  test_query.zsh
20241123-llm-learning-demo/: .env.example  .gitignore  Makefile  README.md  pre-commit-checks  pyproject.toml
20241123-llm-learning-demo/kitsune/: manage.py
20241123-llm-learning-demo/kitsune/kitsune/: asgi.py  settings.py  urls.py  wsgi.py
20241123-llm-learning-demo/kitsune/static/: tailwind_min.css
20241123-llm-learning-demo/kitsune/tasks/: __init__.py  admin.py  celery_instance.py  celery_tasks.py  content_generator.py  models.py  views.py
20241123-llm-learning-demo/kitsune/tasks/management/commands/: celery_worker.py  content_samples.py  createuser.py  populate.py
20241123-llm-learning-demo/kitsune/tasks/migrations/: 0001_initial.py
20241123-llm-learning-demo/kitsune/tasks/templates/: base.html  home.html  input.css  lesson.html  quiz.html  tailwind.config.js
20250130-js-robot-arm/: .gitignore  README.md  index.html  index_minified.html
20250131-js-track-hand-landmarks/: .gitignore  README.md  check_track.ipynb  index.html  index_minified.html
20250223-japan_province_guessing/: .gitignore  README.md  download_flags.sh  index.html  index.min.html  index_tailwindcdn.html  wiki_table_to_json.py
20250413-pgvector_test/: .gitignore  Makefile  README.md  docker-compose.yaml  get_sample_embeddings_jina.sh  pyproject.toml  sample.json  scale.py  script.py
20250727-japanese_verbs/: .gitignore  index.html
20251021-image_pairs_annotation/: README.md  index.html
20251231-threejs_clock/: .gitignore  Makefile  download_hdri.sh  generate_dataset.py  serve.py
20251231-threejs_clock/model_training/: .env.example  .gitignore  Makefile  README.md  pyproject.toml
20251231-threejs_clock/model_training/scripts/: model_training.py  single_inference.py
20251231-threejs_clock/model_training/src/: basic_transform.py  dataset.py  models.py  models_older.py  settings.py  training.py  visualization.py
20251231-threejs_clock/static/: index.html  script.js  style.css
