[project]
requires-python = ">=3.11"

[tool.poetry]
package-mode = false
description = "Example project setup with: fastapi celery redis sql"
name = "m3at-fcrs"
version = "0.1.0"
authors = ["Paul Willot <kiwi.pwillot+github@gmail.com>"]
keywords = [
  "fastapi", "celery", "redis", "sql"
]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "License :: OSI Approved :: MIT License",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
]
readme = "README.md"
repository = "https://github.com/m3at/tiny_projects/tree/main/20240411-fastapi-celery-redis-sql"
documentation = "https://github.com/m3at/tiny_projects/tree/main/20240411-fastapi-celery-redis-sql"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
sqlalchemy = "^2.0.29"
pydantic = {extras = ["email"], version = "^2.7.0"}
uvicorn = "^0.29.0"
celery = "^5.3.6"
# celery = {extras = ["redis"], version = "^5.3.6"}
fastapi = "^0.110.1"
redis = {extras = ["hiredis"], version = "^5.0.3"}
sqlmodel = "^0.0.16"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.7.0"
ruff = "^0.3.5"
flower = "^2.0.1"
