[project]
requires-python = ">=3.12"

[tool.poetry]
package-mode = false
name = "llm-draft-review"
version = "0.1.0"
description = ""
authors = ["Paul Willot <kiwi.pwillot@gmail.com>"]
license = "MIT"
readme = "README.md"
keywords = [
  "llm", "draft",
]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "License :: OSI Approved :: MIT License",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.112.2"
openai = "^1.37.0"
uvicorn = {extras = ["standard"], version = "^0.30.6"}


[tool.poetry.group.dev.dependencies]
ruff = "^0.4.6"
pre-commit = "^3.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
