[project]
name = "pg-vec"
version = "0.1.0"
description = "PG vector exploration"
readme = "README.md"
requires-python = "~=3.13"  # Note: also set in `.python-version`
authors = [
  {name = "Paul Willot"},
]
dependencies = [
    "httpx>=0.27.2",
    "numpy>=2.2.4",
    "pgvector>=0.4.0",
    "psycopg[binary]>=3.2.6",
]

# Limit to 2 OS
environments = [
    "sys_platform == 'darwin'",
    "sys_platform == 'linux'",
]

[dependency-groups]
dev = [
    "ipython>=8.29.0",
    "ruff>=0.8.0",
]

[tool.ruff]
exclude = ["_tmp_*", "*.ipynb"]
# Allow lines to be as long as 120.
line-length = 120
# Fix by default
fix = true
