[project]
name = "analog_clock"
version = "0.1.0"
description = "Analog clock model training"
readme = "README.md"
requires-python = ">=3.13, <3.14"  # Note: also set in `.python-version`
dependencies = [
    "accelerate>=1.12.0",
    "datasets>=4.4.2",
    "einops>=0.8.1",
    "fastparquet>=2024.11.0",
    "huggingface-hub>=1.2.1",
    "matplotlib>=3.10.6",
    "numpy>=2.3.5",
    "opencv-python>=4.11.0.86",
    # "optuna-integration>=4.6.0",
    # "optuna>=4.6.0",
    "pandas>=2.3.3",
    "pyarrow>=22.0.0",
    "pydantic-settings>=2.12.0",
    "rich>=14.2.0",
    "safetensors>=0.7.0",
    "scikit-learn>=1.8.0rc1",
    # "seaborn>=0.13.2",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
    "transformers>=5.0.0rc0",
]

[dependency-groups]
dev = [
    "ipython>=9.5.0",
    "ruff>=0.14",
    "ty>=0.0.8",
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu", marker = "sys_platform != 'linux'" },
  { index = "pytorch-cu130", marker = "sys_platform == 'linux'" },
]
torchvision = [
  { index = "pytorch-cpu", marker = "sys_platform != 'linux'" },
  { index = "pytorch-cu130", marker = "sys_platform == 'linux'" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.uv]
required-version = ">=0.9.20"

[build-system]
requires = ["hatchling>=1.28"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
exclude = [".venv", "_tmp_*"]
line-length = 120
fix = true

[tool.ty.src]
exclude = [".venv", "_tmp_*"]
